Played <audio> looks invisible against the gray background https://bugs.webkit.org/show_bug.cgi?id=146164 <rdar://problem/21014284>
Reviewed by Brent Fulgham.

The plus-darker blend mode was not allowing any white to
show through in the rendering. We don't need this for
audio controls, where we draw on an opaque grey background.

* Modules/mediacontrols/mediaControlsiOS.css:
(audio::-webkit-media-controls-panel): Darken the color of the controls a
little to make white stand out more.
(audio::-webkit-media-controls-timeline): Remove the plus-darker blending.
(video::-webkit-media-controls-timeline): Apply blending only to video.

Canonical link: https://commits.webkit.org/164214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185771 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/Modules/mediacontrols/mediaControlsiOS.css
+++ b/Source/WebCore/Modules/mediacontrols/mediaControlsiOS.css
@@ -167,7 +167,7 @@ video::-webkit-media-controls-panel {
 
 audio::-webkit-media-controls-panel {
     height: 39px;
-    background-color: rgba(228, 228, 228, 1);
+    background-color: rgba(212, 212, 212, 1);
 }
 
 video::-webkit-media-controls-panel.show,
@@ -360,6 +360,9 @@ audio::-webkit-media-controls-timeline {
     border-radius: 0 !important;
     box-sizing: content-box !important;
     -webkit-transform: translate3d(0, 0, 0);
+}
+
+video::-webkit-media-controls-timeline {
     mix-blend-mode: plus-darker;
 }
 
